logs/09_10_2024/09_10_2024_19_29_56

[ 2024-09-10 19:30:02,246 ] - DEBUG - root - main.py:17 - Initiated Preprocessing Module

[ 2024-09-10 19:30:02,247 ] - DEBUG - root - processDataIngestion.py:11 - Document Ingestion class initialized

[ 2024-09-10 19:30:07,315 ] - DEBUG - root - processDataIngestion.py:33 - Successfully loaded the input file to the memory

[ 2024-09-10 19:30:07,315 ] - DEBUG - root - processEdit.py:10 - Process Edit Message class initialized

[ 2024-09-10 19:30:07,315 ] - DEBUG - root - processJSON.py:25 - JSON Pre-Processing class initiated

[ 2024-09-10 19:30:07,315 ] - DEBUG - root - utils.py:31 - [INFO] : Loading the configuration data

[ 2024-09-10 19:30:07,331 ] - INFO - root - utils.py:37 - Config Yaml loaded succesfully.

[ 2024-09-10 19:30:07,357 ] - DEBUG - root - processEdit.py:85 - Operation on-line extraction has initiated

[ 2024-09-10 19:30:07,358 ] - DEBUG - root - processEdit.py:32 - Started operation on line level adjustment

[ 2024-09-10 19:30:07,358 ] - DEBUG - root - processEdit.py:67 - Forwarding JSON object for futher pre-processing task

[ 2024-09-10 19:30:07,358 ] - DEBUG - root - processJSON.py:401 - Dealing with missing columns and sheets

[ 2024-09-10 19:30:07,367 ] - DEBUG - root - processJSON.py:55 - Started extraction of claim IDs from the input file

[ 2024-09-10 19:30:07,368 ] - DEBUG - root - processJSON.py:205 - Data cleaning task is started

[ 2024-09-10 19:30:07,369 ] - DEBUG - root - processJSON.py:117 - Data type conversion task is started

[ 2024-09-10 19:30:07,374 ] - DEBUG - root - processJSON.py:323 - Working on Hippa Attribute

[ 2024-09-10 19:30:07,377 ] - DEBUG - root - processJSON.py:205 - Data cleaning task is started

[ 2024-09-10 19:30:07,379 ] - DEBUG - root - processJSON.py:117 - Data type conversion task is started

[ 2024-09-10 19:30:07,393 ] - DEBUG - root - processJSON.py:269 - max date replacement task is started

[ 2024-09-10 19:30:07,394 ] - DEBUG - root - processJSON.py:205 - Data cleaning task is started

[ 2024-09-10 19:30:07,396 ] - DEBUG - root - processJSON.py:117 - Data type conversion task is started

[ 2024-09-10 19:30:07,400 ] - DEBUG - root - processJSON.py:205 - Data cleaning task is started

[ 2024-09-10 19:30:07,403 ] - DEBUG - root - processJSON.py:117 - Data type conversion task is started

[ 2024-09-10 19:30:07,441 ] - DEBUG - root - processJSON.py:351 - Dealing with Raw data from COB

[ 2024-09-10 19:30:07,442 ] - DEBUG - root - processJSON.py:269 - max date replacement task is started

[ 2024-09-10 19:30:07,444 ] - DEBUG - root - processJSON.py:205 - Data cleaning task is started

[ 2024-09-10 19:30:07,445 ] - DEBUG - root - processJSON.py:117 - Data type conversion task is started

[ 2024-09-10 19:30:07,468 ] - DEBUG - root - processJSON.py:205 - Data cleaning task is started

[ 2024-09-10 19:30:07,469 ] - DEBUG - root - processJSON.py:117 - Data type conversion task is started

[ 2024-09-10 19:30:07,474 ] - DEBUG - root - processJSON.py:205 - Data cleaning task is started

[ 2024-09-10 19:30:07,475 ] - DEBUG - root - processJSON.py:117 - Data type conversion task is started

[ 2024-09-10 19:30:07,488 ] - DEBUG - root - processJSON.py:205 - Data cleaning task is started

[ 2024-09-10 19:30:07,490 ] - DEBUG - root - processJSON.py:117 - Data type conversion task is started

[ 2024-09-10 19:30:07,506 ] - DEBUG - root - processJSON.py:205 - Data cleaning task is started

[ 2024-09-10 19:30:07,508 ] - DEBUG - root - processJSON.py:117 - Data type conversion task is started

[ 2024-09-10 19:30:07,532 ] - DEBUG - root - processJSON.py:87 - Data persistance is started

[ 2024-09-10 19:30:07,538 ] - INFO - root - processJSON.py:101 - Data JSON is stored at the location : C:\Users\2332220\OneDrive - Cognizant\Desktop\GenAI_24\0_Experimentals\0_Expr_Test\1_EXCEL_JSON\1_Input_PreProcessing\artifacts\output\24B121111110_wm_invalidproviderselection.json

[ 2024-09-10 19:30:07,539 ] - DEBUG - root - dataFiltration.py:11 - filterData class initialized

[ 2024-09-10 19:30:07,555 ] - DEBUG - root - dataFiltration.py:235 - Got ['24B121111110_wm_invalidproviderselection.json'] for filtering

[ 2024-09-10 19:30:07,556 ] - DEBUG - root - dataFiltration.py:247 - Started filtering 24B121111110_wm_invalidproviderselection

[ 2024-09-10 19:30:07,556 ] - DEBUG - root - dataFiltration.py:180 - Started filtering and appying 2 filter/s

[ 2024-09-10 19:30:07,562 ] - DEBUG - root - dataFiltration.py:137 - applyFilter initialized for input1.providerdetails.npi == 0

[ 2024-09-10 19:30:07,637 ] - ERROR - root - main.py:42 - There seems to be a issue in Preprocessing - Traceback (most recent call last):
  File "C:\Users\2332220\OneDrive - Cognizant\Desktop\GenAI_24\0_Experimentals\0_Expr_Test\1_EXCEL_JSON\1_Input_PreProcessing\main.py", line 31, in inputPreprocessUnit
    filterObj.getFilteredInputFile(jsonFileName)
  File "C:\Users\2332220\OneDrive - Cognizant\Desktop\GenAI_24\0_Experimentals\0_Expr_Test\1_EXCEL_JSON\1_Input_PreProcessing\components\dataFiltration.py", line 255, in getFilteredInputFile
    dataFrames = self.filterInputFile(inputFile, filters)
  File "C:\Users\2332220\OneDrive - Cognizant\Desktop\GenAI_24\0_Experimentals\0_Expr_Test\1_EXCEL_JSON\1_Input_PreProcessing\components\dataFiltration.py", line 187, in filterInputFile
    dataFrames = self.applyFilter(dataFrames, filterSheet, filterColumn, operator, actualValue) # applying a filter
  File "C:\Users\2332220\OneDrive - Cognizant\Desktop\GenAI_24\0_Experimentals\0_Expr_Test\1_EXCEL_JSON\1_Input_PreProcessing\components\dataFiltration.py", line 160, in applyFilter
    dataFrames[filterSheet] = df[df.apply(lambda row: eval(f"{row[filterColumn]}"+operator+f"{actualValue}"), axis=1)]
  File "C:\Users\2332220\OneDrive - Cognizant\Desktop\GenAI_24\base39\lib\site-packages\pandas\core\frame.py", line 10361, in apply
    return op.apply().__finalize__(self, method="apply")
  File "C:\Users\2332220\OneDrive - Cognizant\Desktop\GenAI_24\base39\lib\site-packages\pandas\core\apply.py", line 916, in apply
    return self.apply_standard()
  File "C:\Users\2332220\OneDrive - Cognizant\Desktop\GenAI_24\base39\lib\site-packages\pandas\core\apply.py", line 1063, in apply_standard
    results, res_index = self.apply_series_generator()
  File "C:\Users\2332220\OneDrive - Cognizant\Desktop\GenAI_24\base39\lib\site-packages\pandas\core\apply.py", line 1081, in apply_series_generator
    results[i] = self.func(v, *self.args, **self.kwargs)
  File "C:\Users\2332220\OneDrive - Cognizant\Desktop\GenAI_24\0_Experimentals\0_Expr_Test\1_EXCEL_JSON\1_Input_PreProcessing\components\dataFiltration.py", line 160, in <lambda>
    dataFrames[filterSheet] = df[df.apply(lambda row: eval(f"{row[filterColumn]}"+operator+f"{actualValue}"), axis=1)]
  File "<string>", line 1
    ==0
    ^
SyntaxError: invalid syntax

